# repo-explainer

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: deploy-frontend.yaml
backend/: .env.example  __init__.py  ai_service.py  chat_service.py  chat_tools.py  claude_service.py  database.py  env.py  github_tools.py  main.py  prompts.py  requirements.txt  schema.py  utils.py
backend/ai/: __init__.py  retry.py
backend/ai/providers/: base.py  claude.py  gemini.py
backend/alembic/: env.py
backend/alembic/versions/: 20250130_0000_001_create_repo_explanations_table.py
backend/prompt_assets/: caveman.md
backend/tests/: conftest.py  test_main_lifespan.py
frontend/: .env.development  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/ChatInterface/: ChatInterface.css  ChatInterface.tsx
frontend/src/components/Footer/: Footer.css  Footer.tsx
frontend/src/components/Header/: Header.css  Header.tsx
frontend/src/components/InputForm/: InputForm.css  InputForm.tsx  index.ts
frontend/src/components/LoadingSpinner/: LoadingSpinner.css  LoadingSpinner.tsx
frontend/src/components/MarkdownRenderer/: MarkdownRenderer.css  MarkdownRenderer.tsx  index.ts
frontend/src/components/MermaidDiagram/: MermaidDiagram.css  MermaidDiagram.tsx  index.ts
frontend/src/components/RepoWorkspace/: RepoWorkspace.css  RepoWorkspace.tsx  index.ts
frontend/src/components/ResultDisplay/: ResultDisplay.css  ResultDisplay.tsx  index.ts
frontend/src/components/ShellCodeBlock/: ShellCodeBlock.css  ShellCodeBlock.tsx  index.ts
frontend/src/config/: api.ts
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
frontend/src/utils/: linkifyRepoPaths.ts  mermaidInit.ts  parseGitHubUrl.ts  repoStorage.ts
frontend/tests/: MarkdownRenderer.test.tsx  linkifyRepoPaths.test.ts  repoStorage.test.ts  useChat.test.ts
